# EnerHabitat

./: README.md  pyproject.toml
enerhabitat/: __init__.py
notebooks/: 002_HeatTransfer.ipynb
old/notebooks/.ipynb_checkpoints/: 003_PropuestaPaquete-checkpoint.ipynb
old/notebooks/ehtools/.ipynb_checkpoints/: __init__-checkpoint.py
src/enerhabitat/: __init__.py  ehtools.py
